# aruco_mapping

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
Calibration/: bluefox_calibration.txt
Headers/: estimator.h  estimator.h~
Sources/: estimator.cpp  estimator.cpp~
include/: aruco_mapping.h  estimator.h
launch/: aruco_mapping.launch  aruco_positioning_system.launch  aruco_positioning_system.launch~
msg/: ArUcoMarkers.msg
src/: aruco_mapping.cpp  aruco_mapping_lib.cpp  estimator.cpp  main.cpp  main.cpp~
